# image_viewer

./: CMakeLists.txt  README.md
include/: app.h  iimage.h  iimagehandler.h  image.h  imagehandler.h
src/: app.cpp  image.cpp  main.cpp
